--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "mobx": "6.3.8",
         "mobx-react": "7.2.1",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "ahooks":"3.3.0"
     },
     "devDependencies": {
         "@babel/preset-react": "7.16.0",
