--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "blueprint-js",
+    "name": "bluep-js",
     "version": "0.0.1",
-    "requires": true,
-    "main":"src/index.js",
+    "description": "一个可扩展的JS流程化运行方案",
+    "main":"src/main.js",
     "dependencies": {
         "mobx": "6.3.8",
         "mobx-react": "7.2.1",
