--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "bluep-js",
-    "version": "0.0.1",
+    "version": "0.0.1-alpha.21",
     "description": "一个可扩展的JS流程化运行方案",
-    "main":"src/main.js",
+    "main":"index.js",
     "homepage": "https://github.com/wurichengn/blueprint-js",
     "repository": {
         "type": "git",
@@ -45,16 +45,20 @@
         "style-loader": "^1.3.0",
         "stylelint": "^14.0.1",
         "url-loader": "^4.1.1",
-        "webpack": "^4.41.1",
+        "webpack": "5.72.0",
         "webpack-bundle-analyzer": "3.8.0",
-        "webpack-cli": "^3.1.2",
+        "webpack-cli": "4.9.2",
         "webpack-dev-server": "^3.11.2",
         "worker-loader": "2.0.0",
         "copy-webpack-plugin": "6.0.0",
-        "uglifyjs-webpack-plugin": "2.2.0"
+        "uglifyjs-webpack-plugin": "2.2.0",
+        "rollup":"2.70.1",
+        "rollup-plugin-babel":"4.4.0",
+        "rollup-plugin-postcss":"4.0.2"
     },
     "scripts": {
-        "build": "cross-env NODE_ENV=production webpack --progress --display-modules --color --config webpack.config.js",
+        "build":"rollup -c rollup.config.js",
+        "build-save": "cross-env NODE_ENV=production webpack --progress --color --config webpack.config.js",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js",
         "devp": "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
         "git": "node project.git.js",
