--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bluep-js",
-    "version": "0.0.1-alpha.21",
+    "version": "0.0.1-alpha.23",
     "description": "一个可扩展的JS流程化运行方案",
     "main":"index.js",
     "homepage": "https://github.com/wurichengn/blueprint-js",
@@ -13,7 +13,8 @@
         "mobx-react": "7.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "ahooks":"3.3.0"
+        "ahooks":"3.3.0",
+        "lodash": "4.17.21"
     },
     "devDependencies": {
         "@babel/preset-react": "7.16.0",
