--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bluep-js",
-    "version": "0.0.1-alpha.23",
+    "version": "0.0.3",
     "description": "一个可扩展的JS流程化运行方案",
     "main":"index.js",
     "homepage": "https://github.com/wurichengn/blueprint-js",
